[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["vlad <khalvlalove@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1"
selene = "2.0.0b12"

[tool.poetry.dev-dependencies]
pylint = "v2.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
